apps/livesync/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: livesync
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: https
  hostnames: [livesync.k8s.hyperion.internal]
  rules:
    - backendRefs:
        - name: couchdb
          port: 5984
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb-redirect
  namespace: livesync
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: http
  hostnames: [livesync.k8s.hyperion.internal]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
